{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 624,
  "lineage": "ec44c008-a419-edc6-4342-fd6739461d49",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0f0ccce3a65740116",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0f0ccce3a65740116",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-06f3c9ba3ea45c8b2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06f3c9ba3ea45c8b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20211025025021088400000009",
            "name_prefix": "all_worker_management",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0e4dd075ac8a29cc5",
            "description": "Allow NFS traffic.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06f3c9ba3ea45c8b2",
                  "sg-089547c64456caae0",
                  "sg-0c1d555420f0a7031"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4dd075ac8a29cc5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f3c9ba3ea45c8b2",
                  "sg-089547c64456caae0",
                  "sg-0c1d555420f0a7031"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "ingress-terraform-20211025025000107100000002-sg",
            "name_prefix": "",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_efs_file_system.efs_provisioner",
            "module.eks.aws_security_group.all_worker_mgmt",
            "module.eks.aws_security_group.worker_group_mgmt_one",
            "module.eks.aws_security_group.worker_group_mgmt_two",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0c1d555420f0a7031",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c1d555420f0a7031",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2021102502502117530000000a",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-089547c64456caae0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-089547c64456caae0",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20211025025020577200000008",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-0763089ddfc0648ad",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0763089ddfc0648ad",
            "ingress": [],
            "name": "airflow-eks-data-bootcamp2021102502502431130000000c",
            "name_prefix": "airflow-eks-data-bootcamp",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-014114b3c0f15486b",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-014114b3c0f15486b",
            "ingress": [],
            "name": "airflow-eks-data-bootcamp2021102502502369480000000b",
            "name_prefix": "airflow-eks-data-bootcamp",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_worker_sg",
              "kubernetes.io/cluster/airflow-eks-data-bootcamp": "owned"
            },
            "tags_all": {
              "Environment": "data-bootcamp",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "airflow-eks-data-bootcamp-eks_worker_sg",
              "kubernetes.io/cluster/airflow-eks-data-bootcamp": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2226193088",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0763089ddfc0648ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2474957182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763089ddfc0648ad",
            "self": false,
            "source_security_group_id": "sg-014114b3c0f15486b",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3533096747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-014114b3c0f15486b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1307564467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-014114b3c0f15486b",
            "self": false,
            "source_security_group_id": "sg-0763089ddfc0648ad",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2099335415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-014114b3c0f15486b",
            "self": false,
            "source_security_group_id": "sg-0763089ddfc0648ad",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2222345325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-014114b3c0f15486b",
            "self": false,
            "source_security_group_id": "sg-014114b3c0f15486b",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cbd0ed45615b5120",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-193-200.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.193.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:internet-gateway/igw-096ca155d1889e6c0",
            "id": "igw-096ca155d1889e6c0",
            "owner_id": "855157247171",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbd0ed45615b5120",
            "connectivity_type": "public",
            "id": "nat-044948fa9071a75d1",
            "network_interface_id": "eni-0db775264f8431ed0",
            "private_ip": "10.0.0.60",
            "public_ip": "3.128.193.200",
            "subnet_id": "subnet-0c2bb2bc998dcfc56",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3ed9640376fae7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-044948fa9071a75d1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3ed9640376fae7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-096ca155d1889e6c0",
            "id": "r-rtb-0fca653d8a28806ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fca653d8a28806ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:route-table/rtb-0f3ed9640376fae7b",
            "id": "rtb-0f3ed9640376fae7b",
            "owner_id": "855157247171",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:route-table/rtb-0fca653d8a28806ca",
            "id": "rtb-0fca653d8a28806ca",
            "owner_id": "855157247171",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0558a530f074e4c",
            "route_table_id": "rtb-0f3ed9640376fae7b",
            "subnet_id": "subnet-02119ccd4da2bc406"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042e72f899b73cf4b",
            "route_table_id": "rtb-0f3ed9640376fae7b",
            "subnet_id": "subnet-08d034d0ac1ae860c"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c241044234c921c",
            "route_table_id": "rtb-0fca653d8a28806ca",
            "subnet_id": "subnet-0c2bb2bc998dcfc56"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:security-group/sg-03bbae7d311231d56",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-03bbae7d311231d56",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default-sg",
            "name_prefix": "",
            "owner_id": "855157247171",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-02119ccd4da2bc406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02119ccd4da2bc406",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855157247171",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-08d034d0ac1ae860c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08d034d0ac1ae860c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855157247171",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-0c2bb2bc998dcfc56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0c2bb2bc998dcfc56",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855157247171",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0381398b53388c4ac"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:vpc/vpc-0381398b53388c4ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c3689b64046a8cca",
            "default_route_table_id": "rtb-0ed8244594ef5a0a2",
            "default_security_group_id": "sg-0841fc7c37a4cb14b",
            "dhcp_options_id": "dopt-0cda6ee1e619428c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0381398b53388c4ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed8244594ef5a0a2",
            "owner_id": "855157247171",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0db726b0f1aab0475",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-136-239-176.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.239.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-us-east-2a"
            },
            "tags_all": {
              "Name": "eks-us-east-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:internet-gateway/igw-06219a30e45372545",
            "id": "igw-06219a30e45372545",
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks"
            },
            "tags_all": {
              "Name": "eks"
            },
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db726b0f1aab0475",
            "connectivity_type": "public",
            "id": "nat-0b2361fb5fd0f706c",
            "network_interface_id": "eni-0e2b1c84db4d3b700",
            "private_ip": "10.0.101.99",
            "public_ip": "3.136.239.176",
            "subnet_id": "subnet-04fd875a2c3318197",
            "tags": {
              "Name": "eks-us-east-2a"
            },
            "tags_all": {
              "Name": "eks-us-east-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e943ac05a6eb96e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2361fb5fd0f706c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e943ac05a6eb96e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06219a30e45372545",
            "id": "r-rtb-0b291cdc3dfd156801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b291cdc3dfd15680",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:route-table/rtb-01e943ac05a6eb96e",
            "id": "rtb-01e943ac05a6eb96e",
            "owner_id": "855157247171",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-private"
            },
            "tags_all": {
              "Name": "eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:route-table/rtb-0b291cdc3dfd15680",
            "id": "rtb-0b291cdc3dfd15680",
            "owner_id": "855157247171",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-public"
            },
            "tags_all": {
              "Name": "eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8a519d584e0057c",
            "route_table_id": "rtb-01e943ac05a6eb96e",
            "subnet_id": "subnet-09354348e97911556"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d1dd0c00acf0d29",
            "route_table_id": "rtb-01e943ac05a6eb96e",
            "subnet_id": "subnet-058f36c6fbcb6533a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcea205bfa055705",
            "route_table_id": "rtb-01e943ac05a6eb96e",
            "subnet_id": "subnet-0f7746b309c6fe870"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0857f0f27c3b2d41f",
            "route_table_id": "rtb-0b291cdc3dfd15680",
            "subnet_id": "subnet-04fd875a2c3318197"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03683f01f4b55606e",
            "route_table_id": "rtb-0b291cdc3dfd15680",
            "subnet_id": "subnet-0ad5fbb703768af8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d98432441ef2e8e2",
            "route_table_id": "rtb-0b291cdc3dfd15680",
            "subnet_id": "subnet-040572d76784a7ff2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-09354348e97911556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09354348e97911556",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks-private-us-east-2a"
            },
            "tags_all": {
              "Name": "eks-private-us-east-2a"
            },
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-058f36c6fbcb6533a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-058f36c6fbcb6533a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks-private-us-east-2b"
            },
            "tags_all": {
              "Name": "eks-private-us-east-2b"
            },
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-0f7746b309c6fe870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f7746b309c6fe870",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks-private-us-east-2c"
            },
            "tags_all": {
              "Name": "eks-private-us-east-2c"
            },
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-04fd875a2c3318197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-04fd875a2c3318197",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks-public-us-east-2a"
            },
            "tags_all": {
              "Name": "eks-public-us-east-2a"
            },
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-0ad5fbb703768af8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0ad5fbb703768af8b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks-public-us-east-2b"
            },
            "tags_all": {
              "Name": "eks-public-us-east-2b"
            },
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:subnet/subnet-040572d76784a7ff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-040572d76784a7ff2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks-public-us-east-2c"
            },
            "tags_all": {
              "Name": "eks-public-us-east-2c"
            },
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:vpc/vpc-00bf2ad1d841ecec4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0aced4e92d6f673",
            "default_route_table_id": "rtb-0f70ec33acfda1302",
            "default_security_group_id": "sg-0f0ccce3a65740116",
            "dhcp_options_id": "dopt-0cda6ee1e619428c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00bf2ad1d841ecec4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f70ec33acfda1302",
            "owner_id": "855157247171",
            "tags": {
              "Name": "eks"
            },
            "tags_all": {
              "Name": "eks"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:vpc-endpoint/vpce-0e9b2a7555fef9438",
            "dns_entry": [
              {
                "dns_name": "vpce-0e9b2a7555fef9438-yl94xloc.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e9b2a7555fef9438-yl94xloc-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e9b2a7555fef9438-yl94xloc-us-east-2c.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e9b2a7555fef9438-yl94xloc-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z06003202D2KLUIYO6OO1"
              }
            ],
            "id": "vpce-0e9b2a7555fef9438",
            "network_interface_ids": [
              "eni-0116bfe3c06294f14",
              "eni-02b5c35d036a87f2b",
              "eni-030e72e92e16e7253"
            ],
            "owner_id": "855157247171",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ccce3a65740116"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-058f36c6fbcb6533a",
              "subnet-09354348e97911556",
              "subnet-0f7746b309c6fe870"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:vpc-endpoint/vpce-0c689afe223503dbc",
            "dns_entry": [
              {
                "dns_name": "vpce-0c689afe223503dbc-i22546bl.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0c689afe223503dbc-i22546bl-us-east-2c.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0c689afe223503dbc-i22546bl-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0c689afe223503dbc-i22546bl-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z05398231AD7UHGRI6XK8"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z05398231AD7UHGRI6XK8"
              }
            ],
            "id": "vpce-0c689afe223503dbc",
            "network_interface_ids": [
              "eni-0360ab08d2546f4c9",
              "eni-03df763a58ee47331",
              "eni-094cf7de6dd53f109"
            ],
            "owner_id": "855157247171",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f0ccce3a65740116"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-058f36c6fbcb6533a",
              "subnet-09354348e97911556",
              "subnet-0f7746b309c6fe870"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "data.aws_security_group.default",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855157247171:vpc-endpoint/vpce-042fbc61556e1a0e5",
            "cidr_blocks": [
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "52.219.141.0/24",
              "3.5.132.0/23",
              "52.219.96.0/20",
              "52.219.176.0/22"
            ],
            "id": "vpce-042fbc61556e1a0e5",
            "owner_id": "855157247171",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-00bf2ad1d841ecec4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_vpc_endpoint_service.s3"
          ]
        }
      ]
    }
  ]
}